Tooled Build System Towards Rust

--- a/deployment/Makefile
+++ b/deployment/Makefile
@@ -1,4 +1,3 @@
-
 # function to check required arguments
 check_defined = \
 	$(strip $(foreach 1,$1, \
@@ -7,8 +6,11 @@ __check_defined = \
 	$(if $(value $1),, \
 		$(error Undefined $1))
 
+RUST_LIB_PATH = "../eCTF-2024-lib/"
+
 all:
 	echo "#define SECRET 1234" > global_secrets.h
+	cd $(RUST_LIB_PATH) && cargo build --release
 
 clean:
 	rm -f global_secrets.h
