--- a/.gitignore
+++ b/.gitignore
@@ -367,3 +367,7 @@ cython_debug/
 
 !device/lib
 msdk/
+component/inc/ectf_params.h
+component/inc/libectf_2024.h
+deployment/global_secrets.h
+eCTF-2024-lib/
