Py: Add the term to py project

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,3 +43,4 @@ ectf_boot = "ectf_tools.boot_tool:main"
 ectf_list = "ectf_tools.list_tool:main"
 ectf_replace = "ectf_tools.replace_tool:main"
 ectf_update = "ectf_tools.update:main"
+ectf_term = "ectf_tools.term:main"
