Build: Made build script look for paths in external file
Used external file for build script that git will not track.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@
 
 !device/lib
 
+user_dir_config.cfg
+/user_dir_config.cfg
+
 ## Begin Generic .gitignore ##
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,c,c++,git,pycharm
